# silk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  TUTORIAL.md  element-refinement.md  implementation_summary.md  left-shift-ideas.md  main.py  pyproject.toml  pytest.ini  setup.py  test.py  todo.md
.cursor/rules/: expression-callbacks-and-continuations.mdc  expression-containers.mdc  expression-effects-and-side-effects.mdc  expression-functional-programming.mdc  expression-options.mdc  expression-references-collections.mdc  expression-references-core-types.mdc  expression-references-functional-helpers.mdc  getting-value-from-result.mdc  lamda-calculus.mdc  railway-oriented-programming.mdc
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.workspace.yml
.github/: pull_request_template.md
.github/workflows/: label-prs.yml  mypy.yml  publish.yml  release.yml  tests.yml  update-changelog.yml
examples/: books_to_scrape.py
scripts/: extract_changelog.py  run_mypy.sh  update_version.py
src/: __init__.py
src/silk/: __init__.py  composition.py  primitives.py
src/silk/actions/: __init__.py  assertion.py  base.py  browser.py  (+14 more)
tests/: conftest.py  test_action_context.py  test_browser_manager.py
tests/actions/: test_base.py  test_browser.py  test_composition.py  test_control.py  test_decorator.py  test_e2e.py  test_element.py  test_extract.py  test_inputs.py  test_keyboard.py  test_manage.py  test_mouse.py  test_navigation.py  test_utils.py
tests/browser/: test_driver.py
tests/selectors/: test_selector.py
(+35 files in other folders)
