[project]
name = "silk"
version = "0.1.0"
description = "A flexible browser automation library with support for multiple drivers"
authors = [
    {name = "Galad Dirie",email = "hello@galad.ca"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "expression (>=5.6.0,<6.0.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "playwright (>=1.51.0,<2.0.0)",
]

[project.optional-dependencies]
playwright = [
    "playwright (>=1.51.0,<2.0.0)",
]
patchright = [
    "patchright (>=1.51.0,<2.0.0)",
]
all = [
    "patchright (>=1.51.0,<2.0.0)",
    "playwright (>=1.51.0,<2.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.1"
pytest-cov = ">=4.1.0"
mypy = "^1.15.0"


[tool.poetry]
packages = [
    {include = "silk", from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
